--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/pwa": "^14.2.10",
     "@angular/router": "^14.2.0",
+    "@angular/service-worker": "^14.2.0",
     "@apollo/client": "^3.7.1",
     "apollo-angular": "^4.1.1",
     "graphql": "^16.6.0",
